test/fixtures/error/nuxt.config.js
export default {
  build: {
    stats: false
  }
}
